# Client_Server

./: CMakeLists.txt  Client_main.cpp  ReadMe.txt  Server_main.cpp
Client/: Client.cpp  Client.h
Protocol/: Protocol.cpp  Protocol.h
Server/: Server.cpp  Server.h  Server_activity.cpp  Server_activity.h
